--- a/about.html
+++ b/about.html
@@ -1,154 +1,174 @@
-
 <!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional
 	codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
 
 
 <!doctype html>
 
-	<head>
-		<meta charset="utf-8">
-		<title>About Us</title>
+<head>
+	<meta charset="utf-8">
+	<title>About Us</title>
 
-		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
-    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/fonts.css">
-		<link rel="stylesheet" href="css/grids.css">
-		<!-- Script for fontawesome -->
-		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
-	</head>
+	<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/grids.css">
+	<!-- Script for fontawesome -->
+	<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
+</head>
 
-	<body>
-		<!----- Top Nav ----->
-		<header>
-			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
-			 <nav class="grid">
-		          <div class="logo col-1of2 ">
-		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
-		          </div>
-		          		
-                  <div class="col-1of6">
-                    	<a href="shop.html">Shop</a>
-                    	<div class="dropdown-items">
-                    		 <a href="shop.html">Flowers</a>
-                    		 <a href="shop-plants.html">Plants</a>
-                    	</div>
-                  </div>
-                   <div class="col-1of6">
-                      	<a href="shop-services.html">Services</a>
-                  </div>
-                  <div class="col-1of6">
-                      	<a href="about.html">About</a>
-                  </div>
-                  <div class="col-1of6">
-                     	 <a href="support.html">Support</a>
-                  </div>
-                   <div class="col-1of6">
-                 		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
-            	  </div>
-		            	
-	      </nav>
-		</header>
-
-		<section class ="about hero">
-			<div class="hero-text">
-				<h1>Meet your friendly neighbourhood garden.</h1>
+<body>
+	<!----- Top Nav ----->
+	<header>
+		<div class="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
+		<nav class="grid">
+			<div class="logo col-1of2 ">
+				<a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 			</div>
-		</section>
+			<div class="hamburger-container">
+				<span class="fa fa-bars" aria-hidden="true"></span>
+				<div class="hamburger-menu">
+					<ul>
+						<li class="hamburger-dropdown"><a href="shop.html">Shop</a>
+						</li>
+						<li>
+							<a href="shop.html">Flowers</a>
 
-		<!----- Values---->
-		<section class ="values grid">
-				<div class ="values col-1of3">
-					<img src="img/icons/family.png" alt="Icon of a family">
-					<h3>Family owned and operated</h3>
-					<p> We are a multigenerational business that has served Vancouver for over 25 years. </p>
+						</li>
+						<li>
+							<a href="shop-plants.html">Plants</a>
+
+						</li>
+						<li><a href="shop-services.html">Services</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="support.html">Support</a></li>
+						<li><a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a></li>
+					</ul>
 				</div>
-
-				<div class ="values col-2of3">
-					<img src="img/icons/earth-truck.png" alt="Icon of a truck with earth on it">
-					<h3>Local</h3>
-					<p>We work with a network of local growers to support low-carbon agriculture. </p>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="shop.html">Shop</a>
+				<div class="dropdown-items">
+					<a href="shop.html">Flowers</a>
+					<a href="shop-plants.html">Plants</a>
 				</div>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="shop-services.html">Services</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="about.html">About</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="support.html">Support</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
+			</div>
 
-				<div class ="values col-3of3">
-					<img src="img/icons/care.png" alt="Icon of a hands capturing a heart">
-					<h3>Bespoke</h3>
-					<p>We consider the details and idiosyncrasies that make each bouquet different and unique.</p>
-				</div>
+		</nav>
+	</header>
 
-		</section>
+	<section class="about hero">
+		<div class="hero-text">
+			<h1>Meet your friendly neighbourhood garden.</h1>
+		</div>
+	</section>
 
-		<!----- Location ---->
-		<div class="row-spacer">
-			<section class="alternating-content grid">
-				<section class="location">
-					<div class ="alternating-content-img col-1of2">
-						<img src="img/map.png" alt="Photo of store's location on Google Maps">
-					</div>
-					<div class ="alternating-content-text col-2of2">
-						<h2>Our location</h2>
-						<p>#102-3375 Kingsway</p>
-						<p>Vancouver, B.C.</p>
-						<p>V5R 5K6</p>
-						<p>(604) 738-0678 </p>
-						<p>
-							<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram
-							</a>
-						</p>
-						<p>
-							<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook
-							</a>
-						</p>
-						<p>We’re open Monday to Fridays from 10am to 5pm.</p>
-					</div>
-				</section>
-			</section>
+	<!----- Values---->
+	<section class="values grid">
+		<div class="values col-1of3">
+			<img src="img/icons/family.png" alt="Icon of a family">
+			<h3>Family owned and operated</h3>
+			<p> We are a multigenerational business that has served Vancouver for over 25 years. </p>
 		</div>
 
+		<div class="values col-2of3">
+			<img src="img/icons/earth-truck.png" alt="Icon of a truck with earth on it">
+			<h3>Local</h3>
+			<p>We work with a network of local growers to support low-carbon agriculture. </p>
+		</div>
 
-		<!----- Footer----->
-		 <footer class="main-footer grid">
-			 <div class="child-footer about">
-				 <h1>ABOUT FOUR SEASONS FLORAL</h1>
-				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
-			 	</p>
-			</div>
+		<div class="values col-3of3">
+			<img src="img/icons/care.png" alt="Icon of a hands capturing a heart">
+			<h3>Bespoke</h3>
+			<p>We consider the details and idiosyncrasies that make each bouquet different and unique.</p>
+		</div>
 
-			 <div class="child-footer location">
-				 <h1>VISIT US</h1>
-				 <p>#102-3375 Kingsway
-					Vancouver, B.C. 
-					V5R 5K6  </p>
-			</div>
+	</section>
 
-			 <div class="child-footer contact">
-				 <h1 >CONTACT US</h1>
-				 <p>(604) 738-0678</p>
-				 <p>
-				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
-				 </p>
-				 <p>
-				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
-				 </p>
-			 </div>
+	<!----- Location ---->
+	<div class="row-spacer">
+		<section class="alternating-content grid">
+			<section class="location">
+				<div class="alternating-content-img col-1of2">
+					<img src="img/map.png" alt="Photo of store's location on Google Maps">
+				</div>
+				<div class="alternating-content-text col-2of2">
+					<h2>Our location</h2>
+					<p>#102-3375 Kingsway</p>
+					<p>Vancouver, B.C.</p>
+					<p>V5R 5K6</p>
+					<p>(604) 738-0678 </p>
+					<p>
+						<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram
+						</a>
+					</p>
+					<p>
+						<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook
+						</a>
+					</p>
+					<p>We’re open Monday to Fridays from 10am to 5pm.</p>
+				</div>
+			</section>
+		</section>
+	</div>
 
-			 <div class="child-footer mailing-list">
-				 <label for="newsletter">GET THE DIRT</label>
-				 <p>No spam. Just great content.</p>
-				 <input aria-label="input email address" type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button aria-label="button submit" type="button" class="btn-submit">→</button>
-			 </div>
-	 	</footer>
 
- 		<div class="sub-footer">
-	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
-	 			<a href="citations.html" target="_blank"> Citations</a>
-	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
- 		</div>
+	<!----- Footer----->
+	<footer class="main-footer grid">
+		<div class="child-footer about">
+			<h1>ABOUT FOUR SEASONS FLORAL</h1>
+			<p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral
+				arrangements.
+			</p>
+		</div>
 
-	</body>
+		<div class="child-footer location">
+			<h1>VISIT US</h1>
+			<p>#102-3375 Kingsway
+				Vancouver, B.C. 
+				V5R 5K6  </p>
+		</div>
+
+		<div class="child-footer contact">
+			<h1>CONTACT US</h1>
+			<p>(604) 738-0678</p>
+			<p>
+				<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
+			</p>
+			<p>
+				<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+			</p>
+		</div>
+
+		<div class="child-footer mailing-list">
+			<label for="newsletter">GET THE DIRT</label>
+			<p>No spam. Just great content.</p>
+			<input aria-label="input email address" type="text" id="email" name="email" placeholder='name@domain.com'>
+			<button aria-label="button submit" type="button" class="btn-submit">→</button>
+		</div>
+	</footer>
+
+	<div class="sub-footer">
+		<a href="styleguide.html" target="_blank"> Styleguide</a>
+		<a href="citations.html" target="_blank"> Citations</a>
+		<a href="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+	</div>
+
+</body>
 
 </html>
