--- a/index.html
+++ b/index.html
@@ -1,160 +1,181 @@
-
 <!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional
 	codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
 
 
 <!doctype html>
 
-	<head>
-		<meta charset="utf-8">
-		<title>Four Seasons Floral Homepage</title>
+<head>
+	<meta charset="utf-8">
+	<title>Four Seasons Floral Homepage</title>
 
-		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
-    	 <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/fonts.css">
-		<link rel="stylesheet" href="css/grids.css">
-		<!-- Script for fontawesome -->
-		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
-	</head>
+	<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/grids.css">
+	<!-- Script for fontawesome -->
+	<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
+</head>
 
-	<body>
-		<!----- Top Nav ----->
-		<header>
-			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
-			 <nav class="grid">
-		          <div class="logo col-1of2 ">
-		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
-		          </div>
-		          		
-                  <div class="col-1of6">
-                    	<a href="shop.html">Shop</a>
-                    	<!---Dropdown tutorial from https://www.w3schools.com/css/css_dropdowns.asp-->
-                    	<div class="dropdown-items">
-                    		 <a href="shop.html">Flowers</a>
-                    		 <a href="shop-plants.html">Plants</a>
-                    	</div>
-                  </div>
-                   <div class="col-1of6">
-                      	<a href="shop-services.html">Services</a>
-                  </div>
-                  <div class="col-1of6">
-                      	<a href="about.html">About</a>
-                  </div>
-                  <div class="col-1of6">
-                     	 <a href="support.html">Support</a>
-                  </div>
-                   <div class="col-1of6">
-                 		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
-            	  </div>       	
-	      </nav>
-		</header>
-
-
-		<!----- Hero Banner----->
-		<section class ="home hero">
-			<div class="hero-text">
-				<h1>Spread happiness with summer's blooms.</h1>
-				<a class="btn-main" href="shop.html">SHOP SUMMER COLLECTION</a>
+<body>
+	<!----- Top Nav ----->
+	<header>
+		<div class="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
+		<nav class="grid">
+			<div class="logo col-1of2 ">
+				<a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 			</div>
-		</section>
+			<div class="hamburger-container">
+				<span class="fa fa-bars" aria-hidden="true"></span>
+				<div class="hamburger-menu">
+					<ul>
+						<li class="hamburger-dropdown"><a href="shop.html">Shop</a>
+						</li>
+						<li>
+							<a href="shop.html">Flowers</a>
 
-		<!----- Product & Service Offerings---->
-		<section class ="categories grid">
-			<div class ="menu">
-				<a href="shop.html">
-					<h2>Fresh bunches </h2>
-					<p>Shop Flowers →</p>
-				</a>
+						</li>
+						<li>
+							<a href="shop-plants.html">Plants</a>
+
+						</li>
+						<li><a href="shop-services.html">Services</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="support.html">Support</a></li>
+						<li><a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a></li>
+					</ul>
+				</div>
 			</div>
-
-
-			<div class ="menu">
-				<a href="shop-plants.html">
-					<h2>Green spaces</h2>
-					<p>Shop Plants →</p>
-				</a>
+			<div class="col-1of6 mobile-hide">
+				<a href="shop.html">Shop</a>
+				<div class="dropdown-items">
+					<a href="shop.html">Flowers</a>
+					<a href="shop-plants.html">Plants</a>
+				</div>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="shop-services.html">Services</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="about.html">About</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="support.html">Support</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
 			</div>
 
-			<div class ="menu">
-				<a href="shop-services.html">
-					<h2> Life's moments</h2>
-					<p>View Services →</p>
-				</a>
-			</div>
-		</section>
+		</nav>
+	</header>
 
 
-		<!----- Alternating Content ----->
-		<section class="alternating-content grid">
-			<div class ="alternating-content-img col-1of2">
-				<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
-			</div>
-			<div class ="alternating-content-text col-2of2">
-				<h2>Home grown.</h2>
-				<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
-				<a class="btn-main" href="about.html">LEARN MORE</a>
-			</div>
-		</section>
+	<!----- Hero Banner----->
+	<section class="home hero">
+		<div class="hero-text">
+			<h1>Spread happiness with summer's blooms.</h1>
+			<a class="btn-main" href="shop.html">SHOP SUMMER COLLECTION</a>
+		</div>
+	</section>
 
-		<div class="row-spacer">
-			<section class="alternating-content grid">
-					<div class ="alternating-content-text col-1of2-right">
-						<h2>The gift of giving.</h2>
-						<p>Give one of nature’s gifts to the people who mean the most to you.</p>
-						<a class="btn-main" href="shop.html">SHOP FLOWERS</a>
-					</div>
-					<div class ="alternating-content-img col-2of2">
-						<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
-					</div>
-			</section>
+	<!----- Product & Service Offerings---->
+	<section class="categories grid">
+		<div class="menu">
+			<a href="shop.html">
+				<h2>Fresh bunches </h2>
+				<p>Shop Flowers →</p>
+			</a>
 		</div>
 
-		<!----- Footer----->
-		 <footer class="main-footer grid">
-			 <div class="child-footer about">
-				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
-				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
-			 	</p>
+
+		<div class="menu">
+			<a href="shop-plants.html">
+				<h2>Green spaces</h2>
+				<p>Shop Plants →</p>
+			</a>
+		</div>
+
+		<div class="menu">
+			<a href="shop-services.html">
+				<h2> Life's moments</h2>
+				<p>View Services →</p>
+			</a>
+		</div>
+	</section>
+
+
+	<!----- Alternating Content ----->
+	<section class="alternating-content grid">
+		<div class="alternating-content-img col-1of2">
+			<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
+		</div>
+		<div class="alternating-content-text col-2of2">
+			<h2>Home grown.</h2>
+			<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to
+				our customers.</p>
+			<a class="btn-main" href="about.html">LEARN MORE</a>
+		</div>
+	</section>
+
+	<div class="row-spacer">
+		<section class="alternating-content grid">
+			<div class="alternating-content-text col-1of2-right">
+				<h2>The gift of giving.</h2>
+				<p>Give one of nature’s gifts to the people who mean the most to you.</p>
+				<a class="btn-main" href="shop.html">SHOP FLOWERS</a>
 			</div>
-
-			 <div class="child-footer location">
-				 <h3>VISIT US</h3>
-				 <p>#102-3375 Kingsway
-					Vancouver, B.C. 
-					V5R 5K6  </p>
+			<div class="alternating-content-img col-2of2">
+				<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
 			</div>
+		</section>
+	</div>
 
-			 <div class="child-footer contact">
-				 <h3 >CONTACT US</h3>
-				 <p>(604) 738-0678</p>
-				 <p>
-				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
-				 </p>
-				 <p>
-				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
-				 </p>
-			 </div>
+	<!----- Footer----->
+	<footer class="main-footer grid">
+		<div class="child-footer about">
+			<h3>ABOUT FOUR SEASONS FLORAL</h3>
+			<p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral
+				arrangements.
+			</p>
+		</div>
 
-			 <div class="child-footer mailing-list">
-				 <label for="newsletter">GET THE DIRT</label>
-				 <p>No spam. Just great content.</p>
-				 <input aria-label="type email address" type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button aria-label="submit" type="button" class="btn-submit">→</button>
-			 </div>
-	 	</footer>
+		<div class="child-footer location">
+			<h3>VISIT US</h3>
+			<p>#102-3375 Kingsway
+				Vancouver, B.C. 
+				V5R 5K6  </p>
+		</div>
 
- 		<div class="sub-footer">
- 			<a href="styleguide.html" target="_blank"> Styleguide</a>
- 			<a href="wireframes.html" target="_blank"> Wireframes</a>
- 			<a href="citations.html" target="_blank"> Citations</a>
- 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
- 		</div>
+		<div class="child-footer contact">
+			<h3>CONTACT US</h3>
+			<p>(604) 738-0678</p>
+			<p>
+				<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
+			</p>
+			<p>
+				<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+			</p>
+		</div>
+
+		<div class="child-footer mailing-list">
+			<label for="newsletter">GET THE DIRT</label>
+			<p>No spam. Just great content.</p>
+			<input aria-label="type email address" type="text" id="email" name="email" placeholder='name@domain.com'>
+			<button aria-label="submit" type="button" class="btn-submit">→</button>
+		</div>
+	</footer>
+
+	<div class="sub-footer">
+		<a href="styleguide.html" target="_blank"> Styleguide</a>
+		<a href="wireframes.html" target="_blank"> Wireframes</a>
+		<a href="citations.html" target="_blank"> Citations</a>
+		<a href="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+	</div>
 
 
-	</body>
+</body>
 
 </html>
